--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="modal">
 			<h2 class="winner">You Rock!</h2>
 			<button class="restart">Play Again?</button>
-			<p class="message">Developed on <a href="https://codepen.io">CodePen</a> by <a href="https://codepen.io/natewiley">Nate Wiley</a></p>
+			<p class="message">Developed on <a href="https://github.com">GitHub</a> by <a href="https://github.com/srijanmondal">Srijan</a></p>
 			<p class="share-text">Share it?</p>
 			<ul class="social">
 				<li><a target="_blank" class="twitter" href="https://twitter.com/share?url=https://codepen.io/natewiley/pen/HBrbL"><span class="fa fa-twitter"></span></a></li>
