--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			<p class="message">Developed on <a href="https://github.com">GitHub</a> by <a href="https://github.com/srijanmondal">Srijan</a></p>
 			<p class="share-text">Share it?</p>
 			<ul class="social">
-				<li><a target="_blank" class="twitter" href="https://twitter.com/share?url=https://codepen.io/natewiley/pen/HBrbL"><span class="fa fa-twitter"></span></a></li>
-				<li><a target="_blank" class="facebook" href="https://www.facebook.com/sharer.php?u=https://codepen.io/natewiley/pen/HBrbL"><span class="fa fa-facebook"></span></a></li>
-				<li><a target="_blank" class="google" href="https://plus.google.com/share?url=https://codepen.io/natewiley/pen/HBrbL"><span class="fa fa-google"></span></a></li>
+				<li><a target="_blank" class="twitter" href="https://twitter.com/share?url=https://srijanmondal.github.io/memory-game/"><span class="fa fa-twitter"></span></a></li>
+				<li><a target="_blank" class="facebook" href="https://www.facebook.com/sharer.php?u=https://srijanmondal.github.io/memory-game/"><span class="fa fa-facebook"></span></a></li>
+				<li><a target="_blank" class="google" href="https://plus.google.com/share?url=https://srijanmondal.github.io/memory-game/"><span class="fa fa-google"></span></a></li>
 			</ul>
 		</div>
 	</div>
